# pyspark-poo-lab

./: .gitignore  INSTRUCOES_EXECUCAO.md  Informação Gerais do Trabalho.txt  LICENSE  MANIFEST.in  README.md  README_PROJETO.md  RESUMO_PROJETO.md  download-datasets.sh  guia-projeto-pyspark.md  pyproject.toml  requirements.txt  test_project_structure.py
data/output/: .gitkeep
data/output/relatorio_pedidos/: .gitkeep  .part-00000-daefc8a2-33b7-49c0-abe1-f69ea6b93ff2-c000.snappy.parquet.crc  part-00000-daefc8a2-33b7-49c0-abe1-f69ea6b93ff2-c000.snappy.parquet
dataset-json-pagamentos-main/dataset-json-pagamentos-main/backup-20250726/: pagamentos.json
src/: __init__.py  main.py
src/business/: __init__.py  order_processor.py
src/config/: __init__.py  spark_config.py
src/data_io/: data_reader.py  data_writer.py
src/exemplo_logging/: app.py  logging_config.json
src/io/: __init__.py  data_reader.py
src/orchestration/: __init__.py  pipeline_orchestrator.py
src/session/: __init__.py  spark_session_manager.py
tests/: test_order_processor.py
