[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-relatorio-pedidos"
version = "1.0.0"
description = "Projeto PySpark para geração de relatório de pedidos com pagamentos recusados"
authors = [{name = "Seu Nome", email = "seu.email@exemplo.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyspark>=3.4.0",
    "pandas>=1.5.0",
    "pytest>=7.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
